# bidirectional-typechecking-with-unification

./: Main.hs  bidirectional-typechecking-with-unification.cabal  cabal.project
app/: Check.hs  Core.hs  Main.hs  Parse.hs  Print.hs  Syntax.hs
src/: Check.hs  Core.hs  Name.hs  Parse.hs  Print.hs  Syntax.hs  Type.hs
test/: Main.hs
