cabal-version:      2.4
name:               bidirectional-typechecking-with-unification
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

executable bidirectional-typechecking-with-unification
  main-is:          Main.hs
  other-modules:
    Check
    Core
    Name
    Parse
    Print
    Syntax
    Type
  build-depends:
    base ^>=4.16.2.0,
    parsers,
    sage >=0.2
  hs-source-dirs:   app
  default-language: Haskell2010
