cabal-version:      2.4
name:               bidirectional-typechecking-with-unification
version:            0.1.0.0
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com

library
  exposed-modules:
    Check
    Core
    Name
    Parse
    Print
    Syntax
  build-depends:
    base ^>=4.16.2.0,
    hashable,
    parsers,
    sage >=0.2,
    unordered-containers
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -Wall -Werror

executable bide
  main-is:          Main.hs
  build-depends:
    base ^>=4.16.2.0,
    bidirectional-typechecking-with-unification,
    bytestring,
    optparse-applicative,
    parsers,
    sage
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options: -Wall -Werror

test-suite tests
  type: exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    base ^>=4.16.2.0,
    bidirectional-typechecking-with-unification,
    hspec,
    sage,
    text
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options: -Wall -Werror